tests/invalid/ho_5.exp
ho_5.p:21: Type error:
          "func(_) -> _" and
          "func(_) -> (_, _)" are not the same
